# backman

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  example_config.ini
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
src/log/: CMakeLists.txt  log.c  log.h
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/subprocess/: CMakeLists.txt  subprocess.cpp  subprocess.hpp
test/: backman.ini  backman.ini.test
